# starling

./: .env.sample  .gitignore  AGENTS.md  PLAN.md  README.md  TASKS.md  justfile  pyproject.toml
.github/workflows/: salary-automation.yml
starling_spaces/: __init__.py  analytics.py  classification.py  cli.py  holiday_signals.py  ingestion.py  reporting.py  salary_automation.py  savings.py
starling_web/: __init__.py  manage.py
starling_web/spaces/: admin.py  apps.py  models.py  urls.py  views.py
starling_web/spaces/migrations/: 0001_initial.py  0002_alter_feeditem_space_uid.py  0003_classificationrule.py  0004_classificationrule_daterange.py  0005_add_application_user_and_spender.py  0006_add_user_defined_category.py  0007_classificationrule_amount_bounds.py  0008_holiday_review_memory.py  0009_counterparty_and_transaction_notes.py  (+2 more)
starling_web/starling_web/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/spaces/: _summary.html  cashflow.html  categories.html  classification_rules.html  holidays.html  home.html  income.html  savings.html  spending.html  things_to_do.html
tests/: conftest.py  test_admin_registration.py  test_cashflow_view.py  test_categories_view.py  test_classification.py  test_django_entrypoints.py  test_holiday_signals.py  test_holiday_suggestions_view.py  test_home_view.py  test_management_commands.py  test_rule_management.py  test_salary_automation.py  test_savings_view.py  test_settings_module.py  test_space_ingestion.py  test_spaces_reporting.py  test_spending_view.py  test_things_to_do_view.py
(+8 files in other folders)
